Исправил сохранение в БД через DataSet Relation

--- a/Bochky2.1/App.config
+++ b/Bochky2.1/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Bochky2._1.Properties.Settings.Database3ConnectionString"
+        <add name="Bochky2.Properties.Settings.Database3ConnectionString"
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Database3.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
